# codeify

./: Procfile  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
apis/: admin.py  models.py  serializers.py  urls.py  views.py
apis/migrations/: 0001_initial.py  0002_enrollmentinquiry.py
codeify/: asgi.py  settings.py  urls.py  wsgi.py
