[project]
name = "codeify"
version = "0.1.0"
description = "Django backend for Codeify"
requires-python = ">=3.10"

dependencies = [
  "Django",
  "djangorestframework",
  "django-cors-headers",
  "django-jazzmin",
  "django-crispy-forms",
  "django-crontab",
  "django-extensions",
  "django-grappelli",
  "django-allauth",
  "django-axes",
  "django-widget-tweaks",
  "gunicorn",
  "whitenoise",
  "pandas",
  "numpy",
  "scipy",
  "matplotlib",
  "seaborn",
  "openpyxl",
  "python-decouple",
  "python-dotenv",
  "requests",
  "twilio",
  "CairoSVG",
  "cairocffi",
  "lxml",
  "aiohttp",
  "aiohttp-retry",
  "anyio",
  "httpx",
  "sniffio",
  "h11",
  "multidict",
  "yarl",
  "Scrapy",
  "parsel",
  "twisted",
  "pyOpenSSL",
  "service-identity",
  "incremental",
  "zope.interface",
  "python-dateutil",
  "pytz",
  "phonenumbers",
  "joblib",
  "scikit-learn",
  "threadpoolctl",
  "packaging",
  "drf-spectacular>=0.29.0",
]
